# ChangeLog for app-office/impressive
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/impressive/ChangeLog,v 1.14 2014/12/13 11:24:57 pacho Exp $

  13 Dec 2014; Pacho Ramos <pacho@gentoo.org> -impressive-0.10.4.ebuild,
  impressive-0.10.5.ebuild:
  Stop RDEPENDing on obsolete font (#282754), drop old

  23 Sep 2014; Dirkjan Ochtman <djc@gentoo.org> metadata.xml:
  Remove python, not a python library

*impressive-0.10.5 (19 May 2014)

  19 May 2014; Justin Lecher <jlec@gentoo.org> +impressive-0.10.5.ebuild:
  Version BUmp. #510624

  06 Mar 2014; Justin Lecher <jlec@gentoo.org> -impressive-0.10.3-r1.ebuild:
  Drop old

  04 Mar 2014; Agostino Sarubbo <ago@gentoo.org> impressive-0.10.3-r2.ebuild:
  Stable for x86, wrt bug #488936

  02 Mar 2014; Pacho Ramos <pacho@gentoo.org> impressive-0.10.3-r2.ebuild:
  amd64 stable, bug #488936

*impressive-0.10.4 (22 Jan 2014)

  22 Jan 2014; Justin Lecher <jlec@gentoo.org> impressive-0.10.3-r2.ebuild,
  +impressive-0.10.4.ebuild, metadata.xml:
  Version Bump, #498882

  08 Jun 2013; Mike Gilbert <floppym@gentoo.org> impressive-0.10.3-r2.ebuild:
  Add missing python deps.

*impressive-0.10.3-r2 (08 Jun 2013)

  08 Jun 2013; Mike Gilbert <floppym@gentoo.org> +files/impressive-pillow.patch,
  +impressive-0.10.3-r2.ebuild:
  Convert to python-single-r1. Replace dev-python/imaging with virtual/python-
  imaging.

  11 Sep 2012; Andreas K. Huettel <dilfridge@gentoo.org> metadata.xml:
  Drop maintainership

  29 Jun 2011; Markus Meier <maekke@gentoo.org> impressive-0.10.3-r1.ebuild:
  x86 stable, bug #371973

  18 Jun 2011; Markos Chandras <hwoarang@gentoo.org>
  impressive-0.10.3-r1.ebuild:
  Stable on amd64 wrt bug #371973

*impressive-0.10.3-r1 (19 Mar 2011)

  19 Mar 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  -impressive-0.10.3.ebuild, +impressive-0.10.3-r1.ebuild:
  Added compatibility and convenience symlinks

*impressive-0.10.3 (17 Mar 2011)
