@@ -1,17 +1,31 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX impressive-pillow.patch 740 SHA256 b1d8909279dddeeb41a65d11e6a045b5edcce830800d9677c8a20fe4872459ee SHA512 99faa23c6524c029f6cec84aadb599871f744fc3e91e1da0e42533393a3e0d5bcab2ff084946d5aa327560cb0dd6001b30a39b4b244a95bd037d9f42bb9d338c WHIRLPOOL 40b6ac537858956a380556e9b135db05a3e595bcb21ff7a31bb887088b484ee5c5b029dd1783954c2290ef8fe0d9295afd9382ae2e943c902ce196a699c87f9b
 DIST Impressive-0.10.3.tar.gz 154171 SHA256 bb4865376db0df3fe307b5f60bddc2bbaf18d2ccb099b2d51bf1723dd94af95e SHA512 46b075fc45ca7bd3edc17ad0053c1c3ba4490943ad4bc3fa64bf5a869b46afab7af1c6108cdb05e894b3b9741d9613478cc57b794bb16b51ec63890a07df2d76 WHIRLPOOL 1dea69b347bbde625a66bb9700d324ca2ebe24e0b57c5404ddb8dad2a78bac9604fb7a071b0d96b49b21b65c7f893f51d403357902dc5f1090e81deb1d19b833
 DIST Impressive-0.10.5.tar.gz 166707 SHA256 55f1f2021c7bcbdd147f44ec7418125c114dfcd606583ecab34a3adaa1fae13b SHA512 3939188d45ac7a617a56be72e72c98923c23073bee2c3c1b7b81fc2e26ce415ceffdf5456d754f921e488181d8edb7df96ad90e6923b2425c49e38da75c02f20 WHIRLPOOL cff1b609e9e722f621ecf5da0ccaee9f2b0d17d22064486f80cfb74ff569f802c3710c7ec1a7e02c6861246d8fa63b51c5468fc5eec0cf9597cdc0ca7ddcabbd
+DIST Impressive-0.11.0b.tar.gz 195138 SHA256 a96735cbd5f0c36dd9e499c068b3a991a852fda71b73acd36da6b764ea198ad9 SHA512 c4038ed7b71ac79078922ee0e24ce3bef4b0384d8d468291f0283266fe8a849825f5798ec1260e40ac12659a8a7cf5325e3aca0e2475b1c483d3ce830f4bc70f WHIRLPOOL e89a979b20aa765e68e433d953f6d5e0a41464a8ee1474213f376d3294ccd0a54e649546316facaa89499bd865addb1ab0706d39b227dcfdcc608c367b8fbdf7
 EBUILD impressive-0.10.3-r2.ebuild 1287 SHA256 3502b726ed21fcf9b3ee694d6fffe2e7b2619dd123d37fc5839d826a9c0de7f4 SHA512 755f7800c658414c97df6e38014d59064a91da94b7de4cb71c5e17225bf9605051b288f43da2831c389dd0c122f9933b050a149f2add7868fb70d3b17f6f01bf WHIRLPOOL d0cc6372adcd5a682bc6c50e4ce50fe1f30c2df7caaf83d18962693bc89257c57e71b8e7752f5f41273a795f2529e7e1056eaff1c5b26d8f14e48857a206f2b7
-EBUILD impressive-0.10.5.ebuild 1181 SHA256 c5a318ca3a1d4d8085a8981eb161a2bd60924ca2370ceb400dfd4c32fa540322 SHA512 92634a7a8529891cd5d26021ee0eb4525133db5c6fb253fcb71ec1abbe72a4a7cb5476bcbe76b060f1bb499fd88fc8040b066aede6c343e28f14dc614134dae6 WHIRLPOOL c82b15b0a7671623db879c396a8c412579206e67386c34079012b3483c9c91f09ef5a29f3b08134fa6aa47cebcb4b5cb6bcbbc6c50f29b1fb81dd9704c141124
-MISC ChangeLog 2198 SHA256 ec48cd815db0e3830346fbb5f2f5fe5864ce5ec4d99e810d53670dc531d8c333 SHA512 ae7e6c83953adcc3a8ca0ba3d595879cb9e76f98d7e35924cebbbc98cfbd5cf54b942bcf94031550f0bc3ed25eb551a3cdee4b6e2459c7aa3fa0c2a2cf899814 WHIRLPOOL be3a328389ccf0c6bdbc8aa24ba1b793eac6027f3729b357fdc5f137f2a7ada7f05c5b1f9e63034db6bccf318edf1abda2366b7bf4770e4e464c711f670bed27
+EBUILD impressive-0.10.5.ebuild 1174 SHA256 2e69d02ef7776e1e5d8afe6bd83fe297f69f86b875330fecf19d6d51ccdcee21 SHA512 3059de6e9a41cde590c5df73e7ceb5e3d7dcda671b14e3a0186f05804a6e39cbc5b575c0b85020cf0512c949641cd2165831dc37ec00b6e73ace4885558fad90 WHIRLPOOL 7d61bfdf3907f2eac39f84509648bba90e005fe617f9290b8bae9fd5c5877044a985aa9f9bf050b7557150a63ae6e85918a25dd493f3d2a3bc37e5cc26f77722
+EBUILD impressive-0.11.0b.ebuild 1680 SHA256 793c9bf01e608c7b35090ae4f0c8eb6e5ebecffdc53b3a5601844475b974822a SHA512 c784fe1b93db9660e8c36aadff08be50ea0457b9debe5340971a367b3bbc218476f16ec68865718c1e82635d8461d6164c8f7a7b6c23dfbf843842c22c180b62 WHIRLPOOL 87614c6e432ede49de3adcebe42cc0a508e4c63b628d1df8a09ecc1213de2549974a129893ec934c6b5fcf0dbad6e45e45ee671629481c33af97dc7d4cfaa7d7
+MISC ChangeLog 2360 SHA256 81c331cf89319b51bdf11e69091ae8037d4091162400a03c49237ceab38b8f2a SHA512 cd62448137497a2a177a59699ec94ff5f470bfa6c09468b95441fc5da2390b56103a3de0e26283d0a5f2720841bcad3ee9fa09c93e1f7681d2faefb79fa4f0dc WHIRLPOOL da0ce9d5a5d45222d5a789805bf8e2cd384d0b1488b5ca11a620148e103831c956a48624b15a46716e4a5ed25a9c0a52eae18ed3f9d26a012bb02df72187a45c
 MISC metadata.xml 158 SHA256 dae7918daac89b300804812d32584889aa1c4e8b9edeced06006900494457a6d SHA512 e4901a5df84502b46aa85ec01804ce680332cebe6148e4a9c8201a38935ee0d4a753bcdb3f18765b06019926a05bf099c0ed61395aa98211610ab7fdb8d7f895 WHIRLPOOL 2f12466ef66cc7b89ec428cd4b498b20f12ca6dbb219f180ac12985dfc4195882ea95809797828a720fe69a0e560d12de9c271f8aacaa06fba09c9c1ccd589e5
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iEYEAREIAAYFAlSMIg0ACgkQCaWpQKGI+9S4LACfckDEY9WSWvV6cpnUWMhfbvtJ
-elMAn1GVE75b0bGE6AJk+TCQRbCM3NKX
-=KI2C
+iQJ8BAEBCgBmBQJVAVNqXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVireAIP/1ZWcSlPN+aM8Ft2PqkTeCnp
+EcnNtSYQEa+imTLDBjopSDIVof1D23mxSNw6WkAPVl0tv+IdggUOQJ/HztsjZiKh
+AimbX5qUC+yGmn0Om7Hi4CDiiHVofIpwIewzVRmjpl8qUxoOqaVlOh5mvDgwdidv
+9/kpj24nL3D5hDtWnLqiI9Aqqeh/fcpEJjVckjM6Y+BjLlgInHDgts0cs92v2r0K
+pWUeossJTemDI1RgIM73xv06URZagkdNJpkzzLkvdc8V1zRQq13SJCA2OSaEqMam
+7JlKvFFShaf2y+yzbXk9M/lsi2KxYa52xOy/OZ1SAazRvp14TMYtXtwdZSftAJfP
+i2+LJGz3OmzBSBhfgJl4ynxguCEdRk9CTvDa7uNJLKAggC0zFmKMXPQAuJTC4c4R
+Sy9wzDYhF7+AHVfIA2o1ZPGwpZ0kyMGQdpG+qh3XaLCvzNmS3J8C/JaxWf6z63GZ
+HNKFYcxBUzCGpMjBTfoYbxKjiwysjSq9BbuWdDXDOJHd1qtxi5Zi1SsGkuHYP0GH
+kvew8EM3lqF7Qw+oP4+OgDvm1loqdy+e925UqYOfm5xnnNe7qUJpAEW2ZnXL2TjZ
+KcJ54K8Fo8bZsZip8jt+RaAYjcuAnm+HjcjD8U+a6aE+eNRXGpN+/XZLLjoRm7wS
+Pq0BhI8IxCmLfz9tSJ5w
+=16FV
 -----END PGP SIGNATURE-----
