@@ -3,26 +3,28 @@ Hash: SHA512
 
 DIST pdfgrep-1.3.0.tar.gz 99739 SHA256 392aeb710b74970fee7d96bec7e2a5c7f175ab8c7daf36c42eae47821635ee17 SHA512 3555ac28685ddfaf9ea6c172aafbc251c0d622caa1c6f98e89c2fae1800e7299d97d3fa5497414f880235fba93963ec00fcea4ff199831abed5817f39ea318ca WHIRLPOOL ce1bbdece0bb69e9065a22625037f11f13e142fa56bca1d2736e4a4b9c853267eb45420b0d14cfecd1dc7639cb340733c0e4c0416fa69c1180cc4ae77d4b788d
 DIST pdfgrep-1.3.1.tar.gz 111653 SHA256 6e8bcaf8b219e1ad733c97257a97286a94124694958c27506b2ea7fc8e532437 SHA512 7a13016a8cf4f8a7387940d7e3862a1fb83f3aa6240084f835e92e958836dff0788db2ae39f35db25d679a2857ddf0b9bcbd7b1aacb10c2a16c3165d56f4efcf WHIRLPOOL 94b69bd0e16d4f0b1b389b09c2330516f25cc772be58e7ad49a2cf1ac0633539bb16a5df595052f468ab89d38ebeeb26b7f2be866555756f423febbf0a600b4b
+DIST pdfgrep-1.3.2.tar.gz 114754 SHA256 386b167434443dd299d389a0ef292d708123255cbab0e179e11b65ba51d9b386 SHA512 dd5d26999405e1e84f5639ea48e15d2aab951a766f828e8e7b45409a7e027a5312757ac64952da56b8a37cf0cd0bc6f43cd16d78600dcc6c8fcb4deabecf0a5b WHIRLPOOL d2ca79e647a21767e0296d72dcdb511157352adf1f1d60beec9d15eb46554f3ec6d9c11f1dfda8988d4f6dcf4a814c52a8ffc28f72c2f227e01430354a8b99f9
 EBUILD pdfgrep-1.3.0.ebuild 590 SHA256 88e82d3b1815b71711af887fcf044c4e3bec8d03a0584c1a79d384a359f3c6b8 SHA512 147fb37c1915ede94e9ee748ef098e72ccfa99083ed39b61ed6174f6a802d89d454bfc48f03b2b776bd51bfc9f62fd517ba766c20240c58bb570ab6599043ed2 WHIRLPOOL 4b2a7bb039e31a34ab190a1a99e9cfe2aa7c6bf4835d8b80a2d99d28044a59030b87b2fd9bc63257a1a41b56955d506b83da9b4226fd9505b6ca1d218d5dfba6
 EBUILD pdfgrep-1.3.1.ebuild 590 SHA256 eb5dc53b64f758a13686164da739b941834ef77843c3470a95aa4488a9ea047e SHA512 5039f1f4ea13d4c43f78af1214b57d6daa545022d890371303adbe845bf3e993d837bbf5aaa9403be21cd1e39107045d09568f713bb234a10eabb7a7ca0d1577 WHIRLPOOL fc1c8c67a1e283d93ae5eb8f1dcd886f6c34900c9500a27600fc32938d680dee24afd193a6dbd2394bbe0da042962288715365767cdcce3c060843e1e30b02e8
-MISC ChangeLog 1464 SHA256 f755e7ab576d26b93804b25e989a2501fcc0bf365a020852ae2e73c0dd8d71c4 SHA512 99bd91282dbee6db8bd36e84261dd4f540a6958171411c2da17611050937b34ae261508b47af2bf4f37fd999029d94b7729057af082f26a9ad8b822f9763ea4e WHIRLPOOL adca0869a372a4cd13caac624a90cbd12531ed4ad2dc47794e2bf146b3f2a36d3597e4247629248c155e2cefaed4f28772195759c000ec3cc92b17000363e5ab
+EBUILD pdfgrep-1.3.2.ebuild 590 SHA256 1174098c575f3c9799337ba102920fae535a3cf79c5a4a4bd15a53a2d0c2ca68 SHA512 67c9551a8d9b5eb5d1e8e0fd5ac8795498f6edf7e075f4c194e399c8b6fc883ea2edc251dfa8b1c12f8169de564fe893334be1062fa4281ad5b7fa5200ab64ef WHIRLPOOL 7cf2eff76b59895a2344445d954741e947296ef52bccb21cb47d52347d059d1e931c5c208c24d79fb2734ba12da33a9838057d48a5a1e66c74a3b742cf23a17e
+MISC ChangeLog 1589 SHA256 b1a255332c9fc09e154472c7920041bb0cb6f5900012c9b042b6195630dc9e9b SHA512 fc39715ce4a0d0d5ceae3734e2432577d0d1b688697ff7bce2fafa08828a5b0a9a25b03ef6c9dc3052eae71201781f2c3356d29faa311b1cdf1cb5036457731c WHIRLPOOL 96b57a9608380e06cfe8637dec194765ccb8c2e65ce944c9b8bb531fdeb77c92fb64e3a9200226e02d2bf1fd4adb3eabf04c3505b67baa2f6e2906a046bec8f8
 MISC metadata.xml 496 SHA256 3dd2ab3abdf2083c41ab656352c8f4c53765bf3b74bbf9d2e05e07b6eef49c33 SHA512 071c9b291ae63a3a4a5c45ce284caa4ace0ed38e65e9b6b80d2cdc04a3e1c38f30cf950779b60bdffa55772060f0cee6560553e3efde6f5a27977104097d3dcb WHIRLPOOL 27f5456ae20ad76b299bc7769483175865de7186e07b4bf4a3e95cf895174309da24349a912509b84e682d3680141e91330df4e1addbf912b18135c008f09ac0
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCgBmBQJUfuyeXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCgBmBQJVAVKXXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirFfQP/jnNpSXOzWHnFy3l1wqJxIu2
-iSYCPX4fXIQDu/tTYH5GhGUdYREpAA90tAZOLvwS+h+OBwTMPrlywjvhW7KkGD1G
-LXmmVGEchESHTc9MRxipWdWXMsCFgJla8SsJ9dfZKnpF9OdJnyJffosiAIrjYqOI
-2W4xRQGeXxCDydleSg+zuZfjEv6QUOzaSRbs7+WvSI7SVjnfAzmBMjF8iDlA7Hwc
-aaSf5erC9qYDbszgY1ouYvV8/wElVqG5NB5HgonNg4JPeG305rjK5CUEfSnAmiCo
-rcjP3E7R0o78y4E7u7p9w6YaB2/F4zzQ2MGYF+RfwQJVjaQwMPAuicdbP66aB7NS
-/oKD9xB2H/Zw3iTU85Hy9tBJiBPxc6zl6PmmZ8jI37+fXmHMNgKPkH13/05z8xIG
-acS60kDcwfPK55+yLOWsUWznvlztyQnklfcevohYQQI1r370SIcMC9uA1VtmffML
-KqeDmO7PXUgF1CY1uAk+BqE3nIZuEkQnJ+zmNvivc+g9dWF0xS9cx2KvJ5TiMo+7
-9hn/9NbJgfZ+JGuapv/PU0rYYFQOSGLBer34C75tRxUTA2MrITy/P4Cx4P0ZbhDK
-hqTpdKn7upxpTdyb3Y+nZeB6Wx/WkcrjElZVYonkEK6qDPAItt857u6MrktaQeb0
-Lnz2M3TgSRFtZ9u2FVAa
-=6Hgl
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVir+WAP/0FhbcDHmDiOit+PT9HIv3GY
+UUntaCDFzqXXKFDJBD9sa1pdZsxdm6M7OhshBFgyEdn326BHsDamv7DdSgS/ywdv
+9AEtTmw64QZVpl1L5hQvwg0xQP97p4KK4Z+gSOccN8MQMkTvxFwgRjc9ZugartbK
+HQ61hs3PosjbDkAOl8tzYwXAIXakp3xtsOmz01xFtGSPdbqZFM0hhSX3qZ9mT/DU
+1sU89RWESO3roCYO5Xr+U3PlEOeA2ijnC9TyTP5/whVLvf/xU29MD5Fx95nVVe70
+FtxVX+4VhWVDG4swzACx9hcBqf4bSeTRgMUSgyURn7rxAC0OZkZg1JGoQZEJjU7g
+9pHmOoazo59K9tCqMkCmIJF68V5aO1qUlQH2Ry7bR1DFKEQ2S/WL2avqMhfVtadl
++VppgtopN3bf3Qwt7V64ys5lrgEfyOLcUD4lSWxRi4cdfkDOZEl35giBpJMtHvJW
+nITlf6ogU20IWGttUvXl1kujquf4Ip80LxQrnpP1hFuP3HEMt5/c9B8Nz2BMnQDc
+shS1+b1K01poxvGFIr4zCnFqE6LBeJr9IEFB5+ed8aeHBc1vqis+6ozqQjpIW4w9
+OyoDSSXheTnwcGpgV+IJx/PTXdnyH7olH17PI0wS8/MA4PrnJ6KWi38WxwixAFCf
+8tb3ms6gAvVQi1pQwGIB
+=x90P
 -----END PGP SIGNATURE-----
