@@ -10,4 +10,4 @@ REQUIRED_USE=|| ( python_targets_python2_7 )
 SLOT=0
 SRC_URI=mirror://sourceforge/impressive/Impressive/0.10.5/Impressive-0.10.5.tar.gz
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multibuild	6d4858dc00f8bc51caf3f957f8430eb0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python-r1	331701099758706863819fe3ff6ddc8a	python-utils-r1	e3288bc2e6e487674ce218b632701c9e	toolchain-funcs	3a1969a45ff85b026c4e0fa3aa2ab443
-_md5_=4baf57b23acf12e12cb7d31ae37795b4
+_md5_=4a379c0bb9b113ee38f9107fe25bbbfc
