@@ -1,0 +1,13 @@
+DEFINED_PHASES=install postinst
+DESCRIPTION=Stylish way of giving presentations with Python
+EAPI=5
+HOMEPAGE=http://impressive.sourceforge.net/
+IUSE=python_targets_python2_7
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+RDEPEND=python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] app-text/pdftk dev-python/pygame[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] virtual/python-imaging[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] x11-apps/xrandr || ( app-text/mupdf app-text/poppler app-text/xpdf app-text/ghostscript-gpl ) || ( media-fonts/dejavu media-fonts/corefonts )
+REQUIRED_USE=|| ( python_targets_python2_7 )
+SLOT=0
+SRC_URI=mirror://sourceforge/impressive/Impressive/0.11.0/Impressive-0.11.0b.tar.gz
+_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multibuild	6d4858dc00f8bc51caf3f957f8430eb0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python-r1	331701099758706863819fe3ff6ddc8a	python-utils-r1	e3288bc2e6e487674ce218b632701c9e	toolchain-funcs	3a1969a45ff85b026c4e0fa3aa2ab443
+_md5_=a47c27064fa654fe9f265d3f77187c9d
