@@ -1,0 +1,12 @@
+DEFINED_PHASES=configure
+DEPEND=app-text/poppler:=[cxx] unac? ( app-text/unac ) virtual/pkgconfig
+DESCRIPTION=A tool similar to grep which searches text in PDFs
+EAPI=5
+HOMEPAGE=http://pdfgrep.sourceforge.net/
+IUSE=unac
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+RDEPEND=app-text/poppler:=[cxx] unac? ( app-text/unac )
+SLOT=0
+SRC_URI=mirror://sourceforge/pdfgrep/pdfgrep-1.3.2.tar.gz
+_md5_=03a32551789b689e157c171755cdb208
