@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile install prepare
+DEPEND=x11-libs/libX11 x11-proto/xproto x11-misc/imake
+DESCRIPTION=A simplistic screen locking program for X
+EAPI=5
+HOMEPAGE=http://ftp.debian.org/debian/pool/main/x/xtrlock/
+KEYWORDS=~amd64 ~ppc ~x86
+LICENSE=GPL-3
+RDEPEND=x11-libs/libX11
+SLOT=0
+SRC_URI=mirror://debian/pool/main/x/xtrlock/xtrlock_2.7.tar.gz
+_eclasses_=multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	3a1969a45ff85b026c4e0fa3aa2ab443
+_md5_=5905a1e8c89e40213e7ead052f73b258
