@@ -4,15 +4,17 @@ Hash: SHA256
 DIST xtrlock_2.2.tar.gz 20716 SHA256 eed63851f4ad9f3026fd0a73767c8d2e5e2b973e050d271be6ec5086faa11ef6 SHA512 00eb877c721d5ad134912ab61969c96ede3b9e8b551cdc527da1b1dab404643b4b03f73a656293efae1bc6a186376addf8000cd500341273a24534bd186af9c9 WHIRLPOOL 0abd1ed9c45fcbd392e989d7e2d29121419620d8e6d767bb84c17c3535bcec9c2b86544109897934aa3607bcb36387e34bf7b30cfbf81c639603b04ba29dde9e
 DIST xtrlock_2.5.tar.gz 70723 SHA256 f07b05801efc39173dd82b04846b832525c72ba7de7df52a7097cbbd5b2df108 SHA512 7004408d02f5dcfe63e804e72105036a3af50912222492131f2d68a51f968e59d7e170533f28ca26880a685d1d1f8207d1a0641b9d14300f260b7f85a5b4a837 WHIRLPOOL 5c6cdac5c6eca5079b1771f4b6e181f4fe22aff6c6d930b52ad1c1543da65e4e629cf0a6db6f0a7555329fb2b145e0d22843a9d5fe27f1819e0f2606b14ca159
 DIST xtrlock_2.6.tar.gz 20814 SHA256 f0acccd39b9beedf1244434045e243cf515ba8653964fe6f3fb9187c640cc3bb SHA512 995530e50892c2f39340cbd82006b1acfed5530cef1ae16e62d1883874b92f6ebe46689bf93af14ac4d2abd4be871aaee7d434db3bdfde86ca69bcf7d3d0b603 WHIRLPOOL fbf87f4455702bdea892391261fca082599de292e3ea3d31659e77734f2e085b247c40a1e5589178024e083ada3a791b6777dbd55b4373ecb840f90d170cd63e
+DIST xtrlock_2.7.tar.gz 20939 SHA256 9993e099fe1c74176fa4b7863cbcf1f746307ee6c90c9ad1e4d2dae1871be6b9 SHA512 44693dfa7b8b109b19c4f61902ac5c181af1d8fb6044115517391211411239a506108e6fd5b998978030f997f9094e9df18e5d40499c6b3b83a42cf9dd1b7f92 WHIRLPOOL 687572be8b7e5118e7d9afedb8c54c74afb647caebc5f4c14c59af2871d86cf25a1c596563e2c903774ab11842b92d2c6245e1c3c9762036c4bcdcfe5373a2e6
 EBUILD xtrlock-2.2.ebuild 876 SHA256 405d3234b8f4a4e4ff23f14f3ed26a2a3890618e4bab0ca7888f07efaf705924 SHA512 dad98f229f782a4894535f71b62541725af0a977a47b98d0395340e0e908f03ff1fe23b2c3cade8eb37258b32ca207518ee16b533b80f6ef36ff2c8e6bc64ed7 WHIRLPOOL 6bac01c94114d8fadf3e968eee08f980e4f7cc3a48cd5f40b6a195cf4768cb2f064df591bd56e7970929634be3afdb98e43868477447f51ef1d93aa97ecf0b9b
 EBUILD xtrlock-2.5.ebuild 879 SHA256 734878fa58f571395a76d4f8a941bd7a4d1bfba8bb770c32ceafd4bf13a2c9e1 SHA512 159475556ef2ad3b7887b2ecdc073f5e635e800f31a8744a75f410e0b66c33d772e46142f0492107f2abfdac13ea83b098bb20ba1eea08ad53fdc3f83e1c18a8 WHIRLPOOL e665e308fdc08cab15c15698df969f02ed70c960c5db0c0b8197046517227d75ddacfd9a56711969c10bc4728737afae4d969ef633a59fdb758f0c782a5bf096
 EBUILD xtrlock-2.6.ebuild 952 SHA256 f899055034d03627dade9bf87661c002561eeb4b078cccadc32680e17cbccbf9 SHA512 d02b0a4a9724147feb48c2d8fdeb917ed46e0993684597aed99f168ad110ec636645188c9583cab4f76fc283eeb71f254070e3fdd526625f8fdeb50901fcc6bd WHIRLPOOL 27aaf5c90d8e7bf68e33d29e8853aced0a67512e4e89f78fdfadd2211b6428916526801c7f8d1146d9db957e329db4a159c9876069afbc7bfde0b62ab4336331
-MISC ChangeLog 4076 SHA256 7cdce07d2574e05dc26cb892f627874e0f5e959c04b3f792b91ffeb45219dc1a SHA512 b64bab5c0437fb4dfd5ace573cf3f281b5e1bd57463120e7510c472b22ab461aaf648425e5ff72b4afe3de697300bbec19c67f47c518e7a6e0e05d000dda700a WHIRLPOOL 8c1b1b0bb765b7565b29a94184c5bb2ae72d4fd1758771efd35330c0c390c7618a7fc89ec3cecd8c70acd938d072519145f15f44e065134179af4e1756b0c1c0
+EBUILD xtrlock-2.7.ebuild 952 SHA256 2d340db5277234e9f0e7a08a522f6328c44aee200599a90f52ec72ff53f4ae54 SHA512 f3adba704adb4069b1e000394dfc7f0aec9214a1ddb5022c725ed5a19dab4b938e8ca0e948095f56e1072cd82cb579babb5bdd139a50f36aadf7402840614231 WHIRLPOOL 97b60bed2e7bda04b8942c457c2ff8a52b5620e2d455e8d6701da3509c5583e27a25d9b47e9a37522a7fb808402da2506e7924245b6030664e5319cc8f7c2c6b
+MISC ChangeLog 4189 SHA256 971a894f20ecc3129af125b3d70467870c47b34eb5d6762b4345338d752c83bf SHA512 1103eda1ed448737cdea5baae5a69f8c95bcb89f056a0b452adc04d00ff5c38e9b357bf8a774e29f4c0ff637a7ebc378ad910f3930aba6758cd3f6b58d97ba90 WHIRLPOOL e1cb864a84843ea6c660411fb741a49b4073fc4149baaa0921dd0aad5f124b86edde83f320cdbf3801273fa7bae49ef9c09a693ee6ebff497ac82e66816a4483
 MISC metadata.xml 173 SHA256 2f2c48f12680e78f700e809ba6ff98c67b1ea8b707291659c1bfb6b20d28835f SHA512 0f9f902a37286192de62589f1aace6bec3cfe2a8511ac95e98b55324a9da1a5e79b8f14316e1be0b818e90c0be0cec5fe16f75d9055301a774b241e1486f62c2 WHIRLPOOL 0d0c57c7890f2cdb7210d2d1d61d03d412478747414999bc7919d70b8243ddc66d7903df50158671e8cc454913b4d859f752bbe3709404aa15608e1f1234d717
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlLUBkEACgkQVWmRsqeSphOOXACeJkvsPFe1NBs2tBzSgpV/g0En
-cm0An3d6tKFNlXkIvtk1gf9GWp4EFwOA
-=F/B3
+iEYEAREIAAYFAlUBVSwACgkQVWmRsqeSphMlMACeIolyd2Jog3mHYdr5p82ziadt
++xwAnROxAosW5bgManu5Vb1D1w4zeKJ0
+=48Ek
 -----END PGP SIGNATURE-----
