@@ -1,6 +1,11 @@
 # ChangeLog for app-text/pdfgrep
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/pdfgrep/ChangeLog,v 1.10 2014/12/03 10:57:33 jlec Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/pdfgrep/ChangeLog,v 1.11 2015/03/12 08:47:18 jlec Exp $
+
+*pdfgrep-1.3.2 (12 Mar 2015)
+
+  12 Mar 2015; Justin Lecher <jlec@gentoo.org> +pdfgrep-1.3.2.ebuild:
+  Version BUmp, #542920
 
 *pdfgrep-1.3.1 (03 Dec 2014)
 
