@@ -1,6 +1,11 @@
 # ChangeLog for x11-misc/xtrlock
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xtrlock/ChangeLog,v 1.28 2014/01/13 15:29:04 jer Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xtrlock/ChangeLog,v 1.29 2015/03/12 08:58:19 jer Exp $
+
+*xtrlock-2.7 (12 Mar 2015)
+
+  12 Mar 2015; Jeroen Roovers <jer@gentoo.org> +xtrlock-2.7.ebuild:
+  Version bump.
 
 *xtrlock-2.6 (13 Jan 2014)
 
